Style and add functionality to waybar; switch to pipewire/wireplumber. To do: Install script

--- a/dotconfig/waybar/style.css
+++ b/dotconfig/waybar/style.css
@@ -6,26 +6,28 @@
 
 window .modules-center {
   border-radius: 0 0 15px 15px;
-  background: rgba(20, 20, 20, 0.9);
+  background: linear-gradient(to bottom right, rgba(20, 20, 20, 0.6) 20%, rgba(20, 20, 20, 0.8) 100%);
 }
 
 window#waybar {
-  background: rgba(20, 20, 20, 0.3);
   padding: 4px 10px;
+  background: transparent;
 }
+
 #workspaces button {
   padding: 0 8px;
   margin: 0 2px;
   border-radius: 999px;
   background: transparent;
   color: #fff;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 #workspaces button.active {
   padding: 0 15px;
   transition: all 0.4s ease-in-out;
   color: #0fa;
+  background: rgba(0, 255, 170, 0.1);
 }
 
 #workspaces button.empty {
@@ -33,7 +35,8 @@ window#waybar {
 }
 
 #workspaces button:hover {
-  background: rgba(255, 255, 255, 0.1);
+  border: #0fa solid 1px;
+  box-shadow: 0 0;
   color: #fff;
 }
 
@@ -46,12 +49,14 @@ window#waybar {
   color: #f33;
 }
 
-#clock, 
-#pulseaudio,
+#clock,
 #tray{
-  margin-right: 20px;
+  margin-right: 10px;
 } 
 
+#window {
+  padding: 0 10px;
+}
 
 #battery {
   color: #fc0;
@@ -62,8 +67,9 @@ window#waybar {
   color: #0fc;
 }
 
-#pulseaudio {
+#wireplumber {
   color: #61afef;
+  margin-right: 20px;
 }
 
 #clock {
@@ -71,12 +77,13 @@ window#waybar {
 }
 
 #custom-notification {
-  color: #ff0;
+  color: #0fa;
   margin-right: 20px;
 }
 
 #custom-power {
   margin-right: 15px;
+  color: red
 }
 
 #window, #window * {
